@@ -1,15 +1,14 @@
 Package: kknn
 Title: Weighted k-Nearest Neighbors
-Version: 1.2-2
-Date: 2013-3-13
+Version: 1.2-3
+Date: 2013-12-16
 Author: Klaus Schliep & Klaus Hechenbichler
-Description: Weighted k-Nearest Neighbors Classification, Regression
-        and Clustering
+Description: Weighted k-Nearest Neighbors Classification, Regression and Clustering
 Maintainer: Klaus Schliep <klaus.schliep@gmail.com>
-Depends: R (>= 2.10), igraph (>= 0.6)
-Imports: Matrix, stats
+Depends: R (>= 2.10)
+Imports: igraph (>= 0.6), Matrix, stats
 License: GPL (>= 2)
-Packaged: 2013-03-13 10:54:02 UTC; klaus
+Packaged: 2013-12-16 11:45:57 UTC; klaus
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-03-13 12:37:18
+Date/Publication: 2013-12-16 12:58:53
