@@ -1,8 +1,8 @@
-6c2d70dd4638cd4ce3f3c58decc9033f *DESCRIPTION
-7d71858c680cb8c638511cb72de0b6a3 *NAMESPACE
-a11589fd455cd9c2fefb53b6521efe26 *NEWS
-662da5c7763da755870ea1049757e98c *R/kknn.R
-9e92340d09996750c4f5cb8dabfb0961 *R/specClust.R
+dd01f927b361a33ae7aae43c26d1ee0a *DESCRIPTION
+9d01cd6dc1b215b7534cf2b7cd5b6d1f *NAMESPACE
+d8834ffa95e16391030151775ce35a7e *NEWS
+655e38081bb36589483d07a7efb4870a *R/kknn.R
+e95acbbd7c083ffeb59f91277401eac6 *R/specClust.R
 91074ac86d02f858cc5095b1f6d30367 *data/glass.RData
 dbc40eb130e5c07ce1115a8a687aa4ea *data/ionosphere.RData
 c7fc2118073afaecd8d61f1717b27df0 *data/miete.RData
@@ -15,4 +15,4 @@ e478f13283b0431ed8fe028de1cb680f *man/ionosphere.Rd
 7b839d7303726161bff8653190d3430b *man/simulation.Rd
 6a77e3becc20ac8fada00eaf5076ad96 *man/specClust.Rd
 260a458808b485efc26bc596fa16216a *man/train.kknn.Rd
-f2680129039f6bdc4a1d2caf57aa0127 *src/dm.c
+eb0146c3a3b5bc868d66c8c60ec836f0 *src/dm.c
