@@ -1,3 +1,11 @@
+            CHANGES IN KKNN VERSION 1.2-3
+
+BUG FIXES
+
+    o Namespace changed  
+
+
+
             CHANGES IN KKNN VERSION 1.2-2
 
 NEW FEATURES
